# prem-utils

./: .env.template  .pre-commit-config.yaml  README.md  e2e.py  e2e_function_calling.py  pyproject.toml  requirements.txt
prem_connectors/: anthropic.py  azure.py  base.py  cloudflare.py  cohere.py  errors.py  fireworksai.py  mistral.py  octoai.py  openai.py  replicate.py  together.py
prem_utils/: __init__.py  default_urls.py  models.json  types.py  utils.py
prem_utils/connectors/: anthropic.py  anyscale.py  azure.py  base.py  cloudflare.py  cohere.py  deepinfra.py  fireworksai.py  groq.py  lamini.py  mistral.py  octoai.py  openai.py  openrouter.py  perplexity.py  prem.py  prem_internals.py  replicate.py  together.py  utils.py
