[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/premAI-io/prem-utils"
Releases = "https://github.com/premAI-io/prem-utils/tags"

[tool.poetry]
name = "prem-utils"
description = "Prem generic utils to use across Prem Components."
authors = ["Filippo Pedrazzini <filippo@premai.io>"]

[tool.poetry.dependencies]
openai = "1.3.7"
tiktoken = "0.5.1"
cohere = "4.39"
anthropic = "0.7.7"
replicate = "0.22.0"
octoai-sdk = "0.7.4"
monsterapi = "1.0.5.post1"
together = "0.2.9"
fireworks-ai = "0.9.0"
mistralai = "0.0.8"
python-dotenv = "1.0.0"
pre-commit = "3.6.0"

# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "prem",
    "config",
]
skip = ["venv/"]
skip_glob = ["**/migrations/*.py"]


# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length = 119

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.DESIGN]
max-parents = 13

[tool.pylint.TYPECHECK]
generated-members = [
    "REQUEST",
    "acl_users",
    "aq_parent",
    "[a-zA-Z]+_set{1,2}",
    "save",
    "delete",
]
